test(card): use html helper in tests

--- a/tests/visual/src/misc/card-callout.html
+++ b/tests/visual/src/misc/card-callout.html
@@ -18,12 +18,9 @@
 
     <div id="test-area" class="grid">
 
-        <div class="k-card k-card-vertical k-card-with-callout">
-            <span class="k-card-callout k-callout-n"></span>
+        <div is="Card" orientation="vertical" callout="top">
             <div class="k-card-inner">
-                <div class="k-card-body">
-                    <h5 class="k-card-title">Card Title Top Callout</h5>
-                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                <div is="CardBody" title="Card Title Top Callout" subtitle="Card Subtitle">
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <div class="k-card-actions">
@@ -33,12 +30,9 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical k-card-with-callout">
-            <span class="k-card-callout k-callout-s"></span>
+        <div is="Card" orientation="vertical" callout="bottom">
             <div class="k-card-inner">
-                <div class="k-card-body">
-                    <h5 class="k-card-title">Card Title Bottom Callout</h5>
-                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                <div is="CardBody" title="Card Title Bottom Callout" subtitle="Card Subtitle">
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <div class="k-card-actions">
@@ -48,12 +42,9 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical k-card-with-callout">
-            <span class="k-card-callout k-callout-w"></span>
+        <div is="Card" orientation="vertical" callout="left">
             <div class="k-card-inner">
-                <div class="k-card-body">
-                    <h5 class="k-card-title">Card Title Left Callout</h5>
-                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                <div is="CardBody" title="Card Title Left Callout" subtitle="Card Subtitle">
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <div class="k-card-actions">
@@ -63,12 +54,9 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical k-card-with-callout">
-            <span class="k-card-callout k-callout-e"></span>
+        <div is="Card" orientation="vertical" callout="right">
             <div class="k-card-inner">
-                <div class="k-card-body">
-                    <h5 class="k-card-title">Card Title Right Callout</h5>
-                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                <div is="CardBody" title="Card Title Right Callout" subtitle="Card Subtitle">
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <div class="k-card-actions">
