--- a/tests/visual/src/misc/card-layout-horizontal.html
+++ b/tests/visual/src/misc/card-layout-horizontal.html
@@ -18,10 +18,8 @@
 
     <div id="test-area" class="grid">
 
-        <div class="k-card k-card-horizontal">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Horizontal Card</h5>
-                <h6 class="k-card-subtitle">Actions Start</h6>
+        <div is="Card" orientation="horizontal">
+            <div is="CardBody" title="Horizontal Card" subtitle="Actions Start">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator k-separator-vertical"></span>
@@ -31,10 +29,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-horizontal">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Horizontal Card</h5>
-                <h6 class="k-card-subtitle">Actions Center</h6>
+        <div is="Card" orientation="horizontal">
+            <div is="CardBody" title="Horizontal Card" subtitle="Actions Center">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator k-separator-vertical"></span>
@@ -44,10 +40,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-horizontal">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Horizontal Card</h5>
-                <h6 class="k-card-subtitle">Actions End</h6>
+        <div is="Card" orientation="horizontal">
+            <div is="CardBody" title="Horizontal Card" subtitle="Actions End">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator k-separator-vertical"></span>
@@ -57,16 +51,14 @@
             </div>
         </div>
 
-        <div class="k-card k-card-horizontal">
+        <div is="Card" orientation="horizontal">
             <div>
-                <div class="k-card-header">
-                    <h5 class="k-card-title">Horizontal Card with Header</h5>
-                    <h6 class="k-card-subtitle">Actions Stretched</h6>
+                <div is="CardHeader" title="Horizontal Card with Header" subtitle="Actions Stretched">
                 </div>
-                <div class="k-card-body">
+                <div is="CardBody">
                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-                <div class="k-card-footer">
+                <div is="CardFooter">
                     Footer
                 </div>
             </div>
