--- a/tests/visual/src/misc/card-layout-vertical.html
+++ b/tests/visual/src/misc/card-layout-vertical.html
@@ -18,10 +18,8 @@
 
     <div id="test-area" class="grid">
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Vertical Card</h5>
-                <h6 class="k-card-subtitle">Actions Start</h6>
+        <div is="Card" orientation="vertical">
+            <div is="CardBody" title="Vertical Card" subtitle="Actions Start">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
@@ -31,10 +29,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Vertical Card</h5>
-                <h6 class="k-card-subtitle">Actions Center</h6>
+        <div is="Card" orientation="vertical">
+            <div is="CardBody" title="Vertical Card" subtitle="Actions Center">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
@@ -44,10 +40,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Vertical Card</h5>
-                <h6 class="k-card-subtitle">Actions End</h6>
+        <div is="Card" orientation="vertical">
+            <div is="CardBody" title="Vertical Card" subtitle="Actions End">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
@@ -57,10 +51,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Vertical Card</h5>
-                <h6 class="k-card-subtitle">Actions Stretched</h6>
+        <div is="Card" orientation="vertical">
+            <div is="CardBody" title="Vertical Card" subtitle="Actions Stretched">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <span class="k-separator"></span>
