--- a/tests/visual/src/misc/card-variants.html
+++ b/tests/visual/src/misc/card-variants.html
@@ -18,10 +18,8 @@
 
     <div id="test-area" class="grid">
 
-        <div class="k-card">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card">
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -30,10 +28,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-primary">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title Primary</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" themeColor="primary">
+            <div is="CardBody" title="Card Title Primary" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -42,10 +38,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-info">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title Info</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" themeColor="info">
+            <div is="CardBody" title="Card Title Info" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -54,10 +48,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-success">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title Success</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" themeColor="success">
+            <div is="CardBody" title="Card Title Success" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -66,10 +58,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-warning">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title Warning</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" themeColor="warning">
+            <div is="CardBody" title="Card Title Warning" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -78,10 +68,8 @@
             </div>
         </div>
 
-        <div class="k-card k-card-error">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title Error</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" themeColor="error">
+            <div is="CardBody" title="Card Title Error" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
