--- a/tests/visual/src/misc/card.html
+++ b/tests/visual/src/misc/card.html
@@ -23,11 +23,9 @@
 
     <div id="test-area" class="grid">
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-header">
-                Card Header
-            </div>
-            <div class="k-card-body">
+        <div is="Card" orientation="vertical">
+            <div is="CardHeader">Card Header</div>
+            <div is="CardBody">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -36,10 +34,8 @@
             </div>
         </div>
 
-        <div class="k-card">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card">
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions" orientation="vertical">
@@ -48,10 +44,8 @@
             </div>
         </div>
 
-        <div class="k-card">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card">
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions" alignment="stretched">
@@ -60,10 +54,8 @@
             </div>
         </div>
 
-        <div class="k-card">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card">
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
@@ -72,12 +64,12 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-header">
+        <div is="Card" orientation="vertical">
+            <div is="CardHeader">
                 Card Header
             </div>
-            <img class="k-card-image" />
-            <div class="k-card-body">
+            <img is="CardImage" />
+            <div is="CardBody">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions">
@@ -86,11 +78,9 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <img class="k-card-image" />
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" orientation="vertical">
+            <img is="CardImage" />
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions" orientation="vertical">
@@ -99,30 +89,26 @@
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" orientation="vertical">
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <img class="k-card-image" />
+            <img is="CardImage" />
             <div is="ActionButtons" class="k-card-actions" alignment="stretched">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
         </div>
 
-        <div class="k-card k-card-vertical">
-            <div class="k-card-body">
-                <h5 class="k-card-title">Card Title</h5>
-                <h6 class="k-card-subtitle">Card Subtitle</h6>
+        <div is="Card" orientation="vertical">
+            <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                 <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
             <div is="ActionButtons" class="k-card-actions" alignment="stretched" orientation="vertical">
                 <button is="Button" fillMode="flat" themeColor="primary">Action 1</button>
                 <button is="Button" fillMode="flat" themeColor="primary">Action 2</button>
             </div>
-            <img class="k-card-image" />
+            <img is="CardImage" />
         </div>
 
     </div>
