--- a/tests/visual/src/misc/chat.html
+++ b/tests/visual/src/misc/chat.html
@@ -60,32 +60,24 @@
                             <span class="k-quick-reply">Reply with different length</span>
                         </div>
                         <div class="k-timestamp">Card Deck</div>
-                        <div class="k-card-deck">
-                            <div class="k-card">
-                                <div class="k-card-body">
-                                    <h5 class="k-card-title">Card Title</h5>
-                                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                        <div is="CardDeck">
+                            <div is="Card">
+                                <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                             </div>
-                            <div class="k-card">
-                                <div class="k-card-body">
-                                    <h5 class="k-card-title">Card Title</h5>
-                                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                            <div is="Card">
+                                <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                             </div>
-                            <div class="k-card">
-                                <div class="k-card-body">
-                                    <h5 class="k-card-title">Card Title</h5>
-                                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                            <div is="Card">
+                                <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                             </div>
-                            <div class="k-card">
-                                <div class="k-card-body">
-                                    <h5 class="k-card-title">Card Title</h5>
-                                    <h6 class="k-card-subtitle">Card Subtitle</h6>
+                            <div is="Card">
+                                <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                     <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                             </div>
