--- a/tests/visual/src/misc/taskboard-card.html
+++ b/tests/visual/src/misc/taskboard-card.html
@@ -38,63 +38,48 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Normal Card</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Normal Card</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Normal card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-hover">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Hovered Card</a>
+                                <div is="Card" class="k-taskboard-card" hover>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Hovered Card</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Hovered card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-focus">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Focused Card</a>
+                                <div is="Card" class="k-taskboard-card" focus>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Focused Card</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Focused card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-selected">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Selected Card</a>
+                                <div is="Card" class="k-taskboard-card" selected>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Selected Card</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Selected card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-disabled">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Disabled Card</a>
+                                <div is="Card" class="k-taskboard-card" disabled>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Disabled Card</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Disabled card body</p>
                                     </div>
                                 </div>
@@ -114,51 +99,39 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Normal Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Normal Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-hover">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link k-state-hover" href="#">Hovered Card Title</a>
+                                <div is="Card" class="k-taskboard-card" hover>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" hover href="#">Hovered Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-focus">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link k-state-focus" href="#">Focused Card Title</a>
+                                <div is="Card" class="k-taskboard-card" focus>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" focus href="#">Focused Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card k-state-selected">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">This is a very very very very very very very very very very very very very very very long card title</a>
+                                <div is="Card" class="k-taskboard-card" selected>
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">This is a very very very very very very very very very very very very very very very long card title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card body</p>
                                     </div>
                                 </div>
