--- a/tests/visual/src/misc/taskboard-pane.html
+++ b/tests/visual/src/misc/taskboard-pane.html
@@ -41,14 +41,12 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions"><button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -67,14 +65,12 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions"><button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -93,14 +89,12 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions"><button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -162,14 +156,12 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions"><button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -188,14 +180,12 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions"><button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -214,14 +204,12 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions"><button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
