--- a/tests/visual/src/misc/chat-scrollable-deck.html
+++ b/tests/visual/src/misc/chat-scrollable-deck.html
@@ -38,32 +38,24 @@
                         </div>
                         <div class="k-card-deck-scrollwrap">
                             <button is="Button" icon="arrow-chevron-left"></button>
-                            <div class="k-card-deck">
-                                <div class="k-card">
-                                    <div class="k-card-body">
-                                        <h5 class="k-card-title">Card Title</h5>
-                                        <h6 class="k-card-subtitle">Card Subtitle</h6>
+                            <div is="CardDeck">
+                                <div is="Card">
+                                    <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                         <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                 </div>
-                                <div class="k-card">
-                                    <div class="k-card-body">
-                                        <h5 class="k-card-title">Card Title</h5>
-                                        <h6 class="k-card-subtitle">Card Subtitle</h6>
+                                <div is="Card">
+                                    <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                         <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                 </div>
-                                <div class="k-card">
-                                    <div class="k-card-body">
-                                        <h5 class="k-card-title">Card Title</h5>
-                                        <h6 class="k-card-subtitle">Card Subtitle</h6>
+                                <div is="Card">
+                                    <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                         <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                 </div>
-                                <div class="k-card">
-                                    <div class="k-card-body">
-                                        <h5 class="k-card-title">Card Title</h5>
-                                        <h6 class="k-card-subtitle">Card Subtitle</h6>
+                                <div is="Card">
+                                    <div is="CardBody" title="Card Title" subtitle="Card Subtitle">
                                         <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                 </div>
