--- a/tests/visual/src/misc/taskboard-resources.html
+++ b/tests/visual/src/misc/taskboard-resources.html
@@ -30,27 +30,21 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-taskboard-card-category k-card" style="border-left-color: orange;">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card k-taskboard-card-category" style="border-left-color: orange;">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-taskboard-card-category k-card" style="border-left-color: teal;">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card k-taskboard-card-category" style="border-left-color: teal;">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
