--- a/tests/visual/src/misc/taskboard-rtl.html
+++ b/tests/visual/src/misc/taskboard-rtl.html
@@ -46,39 +46,30 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -96,27 +87,21 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
@@ -134,27 +119,21 @@
                         </div>
                         <div class="k-taskboard-column-cards-container">
                             <div class="k-taskboard-column-cards">
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
-                                <div class="k-taskboard-card k-card">
-                                    <div class="k-card-header k-hbox">
-                                        <a class="k-card-title k-link" href="#">Card Title</a>
+                                <div is="Card" class="k-taskboard-card">
+                                    <div is="CardHeader" class="k-hbox" actions="more">
+                                        <a is="CardTitle" class="k-link" href="#">Card Title</a>
                                         <span class="k-spacer"></span>
-                                        <div class="k-card-header-actions">
-                                            <button is="Button" fillMode="flat" icon="more-vertical" class="k-card-details"></button>
-                                        </div>
                                     </div>
-                                    <div class="k-card-body">
+                                    <div is="CardBody">
                                         <p>Card Body</p>
                                     </div>
                                 </div>
