--- a/tests/visual/src/misc/tilelayout.html
+++ b/tests/visual/src/misc/tilelayout.html
@@ -13,85 +13,85 @@
 
     <div id="test-area">
         <div id="tilelayout" class="k-widget k-tilelayout" style="grid-template-columns: repeat(5, minmax(0px, 1fr)); grid-template-rows: repeat(5, minmax(0px, 1fr)); gap: 16px; width: 1000px; padding: 16px;">
-            <div class="k-tilelayout-item k-card k-state-focus" style="order: 0; grid-column-end: span 1; grid-row-end: span 1;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" focus style="order: 0; grid-column-end: span 1; grid-row-end: span 1;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 1; grid-column-end: span 1; grid-row-end: span 1;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 1; grid-column-end: span 1; grid-row-end: span 1;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 2;grid-column-end: span 1;grid-row-end: span 2; width: 250px; position: absolute; height: 198px;left: 430px;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 2;grid-column-end: span 1;grid-row-end: span 2; width: 250px; position: absolute; height: 198px;left: 430px;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
             <div class="k-resize-handle k-cursor-ew-resize" style="top: 36px; left: 674px; height: 196px; width: 9px;"></div>
             <div class="k-layout-item-hint k-layout-item-hint-resize" style="order: 2;grid-column-end: span 2;grid-row-end: span 2;"></div>
-            <div class="k-tilelayout-item k-card" style="order: 3; grid-column-end: span 1; grid-row-end: span 1;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 3; grid-column-end: span 1; grid-row-end: span 1;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 4; grid-column-end: span 1; grid-row-end: span 2;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 4; grid-column-end: span 1; grid-row-end: span 2;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 5; grid-column-end: span 1; grid-row-end: span 1;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 5; grid-column-end: span 1; grid-row-end: span 1;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 6; grid-column-end: span 1; grid-row-end: span 1;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 6; grid-column-end: span 1; grid-row-end: span 1;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 7; grid-column-end: span 1; grid-row-end: span 2;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 7; grid-column-end: span 1; grid-row-end: span 2;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 8; grid-column-end: span 1; grid-row-end: span 1;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 8; grid-column-end: span 1; grid-row-end: span 1;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
-            <div class="k-tilelayout-item k-card" style="order: 9; grid-column-end: span 1; grid-row-end: span 2;">
-                <div class="k-tilelayout-item-header k-card-header">
+            <div is="Card" class="k-tilelayout-item" style="order: 9; grid-column-end: span 1; grid-row-end: span 2;">
+                <div is="CardHeader" class="k-tilelayout-item-header">
                     Title goes here
                 </div>
-                <div class="k-tilelayout-item-body k-card-body">
+                <div is="CardBody" class="k-tilelayout-item-body">
                     Content goes here
                 </div>
             </div>
